Mon May 17 12:26:31 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (read_escape): char may be unsigned.

	* string.c (rb_str_succ): ditto.

	* string.c (tr_trans): ditto.

	* object.c (Init_Object): methods `&', `|', `^' are added to nil.

	* range.c (rb_range_beg_len): it should be OK for [0..-len-1].

	* regex.c (re_search): search for byte literal within mbcs.

	* regex.c (is_in_list): parsh

	* regex.c (re_compile_fastmap): should have not alter the loop
	  variable `j' if TRASLATE_P().

	* regex.c (re_compile_pattern): escaped characters should be read
	  by PATFETCH_RAW(c).

Sat May 15 11:23:51 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* regex.c (re_match): endline2 (\Z) should not match at the point
	  between a newline and end-of-line, like endline ($).

	* class.c (include_class_new): should initialize iv_tbl to share
	  between module and iclass.

Fri May 14 08:50:27 1999  Akira Endo  <akendo@t3.rim.or.jp>

	* regex.c (re_compile_fastmap): it should be k != 0 to skip.

Fri May 14 12:46:56 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* time.c (time_load): a bug in old marshal format support.

	* instruby.rb: make site_ruby directory.

Fri May 14 10:18:02 1999  WATANABE Tetsuya  <tetsu@jpn.hp.com>

	* regex.c (re_match): a bug in inline `.*' etc.

Fri May 14 09:58:46 1999  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>

	* ruby.c (addpath): should have specified string length.

Thu May 13 10:40:44 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (rb_eval_string_wrap): new function.

	* regex.c (re_compile_pattern): POSIX line match should alter
	  behavior for `^' and `$' to begbuf and endbuf2 respectively.

	* ext/pty/pty.c: un-ANSI-fy function arguments.

Wed May 12 14:19:38 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* struct.c (iv_get): in case of inheritance of generated struct
	  class, __member__ and __size__ should also be inherited.
	  Thanks for Pros Yeboah <yeboah@tu-harburg.de>.
